# Operating_Systems

./: OS.md  README.md
EX1/: .nfs00000000736c057e00000099  README.md  a.out  gccfind.sh  myshell.c  tennis.sh  test.c
EX2/: Readme.md  comp.out  ex21.c  ex22.c  tests.sh
EX2/tests_ex21/10/: 2.txt
EX2/tests_ex21/12/: 1.txt
EX2/tests_ex21/13/: 1.txt
EX2/tests_ex21/14/: 1.txt  2.txt
EX2/tests_ex21/15/: 2.txt
EX2/tests_ex21/16/: 1.txt
EX2/tests_ex21/19/: 2.txt
EX2/tests_ex21/2/: 1.txt
EX2/tests_ex21/20/: 1.txt  2.txt
EX2/tests_ex21/21/: 1.txt
EX2/tests_ex21/22/: 1.txt  2.txt
EX2/tests_ex21/23/: 2.txt
EX2/tests_ex21/24/: 1.txt  2.txt
EX2/tests_ex21/25/: 1.txt
EX2/tests_ex21/26/: 1.txt  2.txt
EX2/tests_ex21/27/: 2.txt
EX2/tests_ex21/28/: 1.txt
EX2/tests_ex21/3/: 1.txt
EX2/tests_ex21/30/: 1.txt  2.txt
EX2/tests_ex21/31/: 1.txt  2.txt
EX2/tests_ex21/32/: 1.txt  2.txt
EX2/tests_ex21/33/: 1.txt  2.txt
EX2/tests_ex21/34/: 1.txt  2.txt
EX2/tests_ex21/35/: 1.txt  2.txt
EX2/tests_ex21/36/: 1.txt  2.txt
EX2/tests_ex21/37/: 1.txt  2.txt
EX2/tests_ex21/38/: 1.txt  2.txt
EX2/tests_ex21/39/: 1.txt  2.txt
EX2/tests_ex21/4/: 1.txt
EX2/tests_ex21/40/: 1.txt  2.txt
EX2/tests_ex21/41/: 2.txt
EX2/tests_ex21/42/: 2.txt
EX2/tests_ex21/43/: 2.txt
EX2/tests_ex21/44/: 1.txt
EX2/tests_ex21/45/: 2.txt
EX2/tests_ex21/47/: 1.txt  2.txt
EX3/: CMakeLists.txt  Readme.md  bounded_buffer.c  bounded_buffer.h  conf.txt  dispatcher.c  dispatcher.h  main.c  main.h  producer.c  producer.h  screenManager.c  screenManager.h
(+52 files in other folders)
